# gfx-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_utils.cpp  shader.cpp  shader_test.cpp  solar_system.cpp
shader/: color.vert
shaders/: color.frag  color.vert  generic.frag  generic.vert
src/: BasicTriangle.hpp  main.cpp  mesh_utils.hpp  shader.hpp  solar_system.cpp  solar_system_data.hpp
